# gym-locker-optimizer

./: .gitignore  README.md  pyproject.toml
docs/: field-notes.md
examples/: active_sessions.json  visit_history.csv
lockerfit/: __init__.py  __main__.py  layout.py  models.py  optimizer.py  predictor.py  simulation.py
tests/: test_layout.py  test_optimizer.py  test_predictor.py  test_simulation.py
typescript/: package.json
typescript/src/: index.ts  layout.ts  optimizer.ts  types.ts
