[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-locker-optimizer"
version = "0.1.0"
description = "Privacy-friendly locker assignment for gyms and fitness clubs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Open Source Contributors" }]
keywords = [
    "gym",
    "fitness",
    "locker",
    "locker-assignment",
    "optimization",
    "simulation",
    "privacy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.scripts]
lockerfit = "lockerfit.__main__:main"

[tool.setuptools.packages.find]
include = ["lockerfit*"]
